# advanced_programming_techniques

./: README.md
p1/: .gitignore  CMakeLists.txt  main.cc  test.cc  test_2.cc
p1/src/: array.cc  array.h  simple_string.cc  simple_string.h
p2/: CMakeLists.txt  main.cu  sample2D.config.example  sample3D.config
p2/src/: configParser.cc  configParser.h  grid2D.cuh  grid3D.cuh  helper.h
se1/: CMakeLists.txt  main.cc
se1/src/: vector3.cc  vector3.h
se2/: .gitignore  CMakeLists.txt
se2/src/: heat_transfer_1D.cc
test/: main.cc
test/src/: add.h
